# PDF-Knowledge-Miner

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  test_e2e.py
app/: cli.py  main.py
app/api/routes/: admin.py  documents.py  health.py  search.py
app/core/: config.py  database.py  logging_config.py
app/services/: cache_service.py  pdf_processor.py  search_service.py
app/utils/: text_processing.py
data/index/: metadata.json
scripts/: init-db.sql  pg_hba.conf
src/: main.py  utils.py
